--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,1 +1,6 @@
-<p>sidebar works!</p>
+<div class="bg-dark border-right" id="sidebar">
+  <h3>GifsApp</h3>
+  <hr />
+
+  <div class="list-group list-reset">Search</div>
+</div>
