--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,6 +1,13 @@
-<div class="bg-dark border-right" id="sidebar">
-  <h3>GifsApp</h3>
-  <hr />
+<div class="bg-dark border-right p-3" id="sidebar">
+  <h3 class="text-light">GifsApp</h3>
+  <hr class="text-white" />
 
-  <div class="list-group list-reset">Search</div>
+  <div *ngFor="let tag of tagsHistory" class="list-group list-reset my-2">
+    <button
+      (click)="tagSelected(tag)"
+      class="list-group-item list-group-item-action"
+    >
+      {{ tag | titlecase }}
+    </button>
+  </div>
 </div>
